# one-data-studio-lite

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  README_zh.md  bandit-report.json  coverage.json  deploy.sh  docker-compose.mlops.yml  docker-compose.ops.yml  docker-compose.yml  ods.sh  platform-requirements.md  pyproject.toml  pytest.ini  start-all.sh
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/versions/: 20250101_initial_schema.py  20250220_add_quality_and_report_schedule_models.py  20260315_build.py  20260315_edge.py  20260315_knowledge.py  20260315_monitoring.py  20260315_serverless.py  20260315_storage.py
apps/backend/app/api/v1/: __init__.py  aihub.py  annotation.py  argo.py  auth.py  automl.py  billing.py  build.py  celery.py  cluster.py  data_collection.py  dataset.py  edge.py  experiment.py  feature_store.py  finetune.py  git.py  gpu.py  ide.py  knowledge.py  lineage.py  llm.py  metadata.py  metrics.py  model.py  monitoring.py  notebook.py  ocr.py  operator.py  permission.py  quality.py  report.py  serverless.py  serving.py  sqllab.py  sso.py  storage.py  tenant.py  tensorboard.py  training.py  (+1 more)
apps/backend/app/connectors/: base.py
apps/backend/app/core/: __init__.py  config.py  database.py  security.py
apps/backend/app/middleware/: __init__.py  audit.py  validation.py
apps/backend/app/models/: __init__.py  alert.py  asset.py  automl.py  billing.py  build.py  data_collection.py  dataset.py  edge.py  experiment.py  feature_store.py  finetune.py  gpu.py  knowledge.py  lineage.py  model_registry.py  monitoring.py  notebook.py  quality.py  report.py  serverless.py  sso.py  standard.py  storage.py  tenant.py  tensorboard.py  training.py  user.py  workflow.py
apps/backend/app/schemas/: __init__.py  alert.py  analysis.py  bi.py  dataset.py  finetune.py  metadata.py  report.py  storage.py  tensorboard.py  user.py
apps/backend/app/services/: alert_service.py  asset_service.py  bi_service.py  lineage_service.py  metadata_engine.py  ml_utils.py  permission_service.py  scheduler_service.py
apps/backend/app/services/aihub/: __init__.py  algorithm_marketplace.py  app_marketplace.py  deployer.py  finetune.py  registry.py
apps/backend/app/services/annotation/: __init__.py  auth.py  multimedia.py  quality_control.py  service.py
apps/backend/app/services/argo/: __init__.py  argo_client.py  workflow_converter.py
apps/backend/app/services/auth/: ldap.py  oidc.py  saml.py  sso.py  tenant.py
apps/backend/app/services/automl/: __init__.py  automl_service.py
apps/backend/app/services/billing/: __init__.py  billing.py  metering.py
apps/backend/app/services/cluster/: __init__.py  manager.py
apps/backend/app/services/data_collection/: __init__.py  orchestrator.py
apps/backend/app/services/dataset/: __init__.py  manager.py  statistics.py  storage.py  version.py
apps/backend/app/services/edge/: __init__.py  manager.py
apps/backend/app/services/experiment/: __init__.py  experiment.py  hyperopt.py  metric.py  mlflow_client.py  run.py
apps/backend/app/services/feature_store/: __init__.py  computation_service.py  feature_service.py  serving.py
apps/backend/app/services/finetune/: __init__.py  orchestrator.py
apps/backend/app/tasks/: system_tasks.py
apps/backend/data/: .gitkeep
apps/backend/scripts/: README.md  __init__.py  create_admin.py  fix_all_pipelines.py  init_local_datasource.py  register_production_sources.py  test_and_scan_sources.py
apps/backend/scripts/init_production_data/: __init__.py  config.py
apps/backend/tests/: conftest.py  setup_test_data.py  test_alert_service.py  test_api.py  test_audit_middleware.py  test_celery_api.py  test_lineage_service.py  test_metadata_engine.py  test_ml_utils.py  test_ocr_api.py  test_permission_service.py  test_report_service.py  test_security.py  test_standard_service.py
apps/backend/tests/e2e/: test_admin_lifecycle.py  test_analyst_lifecycle.py  test_engineer_lifecycle.py
apps/backend/tests/fixtures/: __init__.py
(+1343 files in other folders)
